Add thesis pdf and link to it.

--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
 
     <div class="container">
       <section id="main_content">
-        <p>Thesis PDF: -</p>
-
-<p>Presentation slides PDF: -</p>
+        <ul>
+          <li><a href="files/thesis.pdf">Thesis PDF</a></li>
+          <li><a href="#">Presentation PDF</a></li>
+        </ul>
       </section>
     </div>
 
-    
+
   </body>
 </html>
