Add slides pdf and link to them.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section id="main_content">
         <ul>
           <li><a href="files/thesis.pdf">Thesis PDF</a></li>
-          <li><a href="#">Presentation PDF</a></li>
+          <li><a href="files/slides.pdf">Presentation PDF</a></li>
         </ul>
       </section>
     </div>
